--- a/Home.html
+++ b/Home.html
@@ -6,6 +6,7 @@
     <body>
         <div>
             <p>ธนัช เกิดทิพย์</p>
+            <p>ณัฐดนัย พันธุเสนา</p>
         </div>
     </body>
 </html>
